--- a/html_001_basic.html
+++ b/html_001_basic.html
@@ -10,6 +10,15 @@
     <!--
         comment(주석) : 프로그램 실행에 영향을 안줌 / 파일설명할때주로사용
     -->
-    <p>웹 문서 구현</p>
+    <h2>웹 문서 구현</h2>
+    <p>html: 문서의 구조를 작성한다.</p>
+    <p>css : 문서의 스타일을 작성한다.</p>
+    <p>javascript: 문서를 동적으로 처리한다.</p>
+
+    <h2>HTML</h2>
+    <p>xhtml</p>
+    <p>XML</p>
+    <p class="id">content</p>
+    <hr />
   </body>
 </html>
