--- a/html_003_basic.html
+++ b/html_003_basic.html
@@ -10,7 +10,10 @@
     <h1>제목1
         <h2>제목2
             <p>연습연습</p>
+            <p>연습2</p>
+            <p>이모지 불러오는거 뭐였더라</p>
             
+
         </h2>
     </h1>
     
