--- a/html_003_basic.html
+++ b/html_003_basic.html
@@ -12,8 +12,8 @@
             <p>연습연습</p>
             <p>연습2</p>
             <p>이모지 불러오는거 뭐였더라</p>
-            
-
+            <p>🤣😂😊생각남</p>
+            <p>윈도우키 + ;</p>
         </h2>
     </h1>
     
