--- a/html_005_br_hr.html
+++ b/html_005_br_hr.html
@@ -12,5 +12,20 @@
     </p>
 
     <hr />
+    <!--
+<p>태그(paragraph)
+1. 텍스트를 단락으로 정의할때 사용
+2. 단락의 요소에는 a, img 등의 인라인요소와 텍스트만을 사용할 수 있다.
+3. 단락 요소에는 블록요소를 사용할 수 없다.
+4. 단락안에는 강제로 줄바꿈해야하는 경우 <br/>태그를 사용할 수 있지만, 
+   시각적인 효과등을 위해 남용하지 않는다
+
+<br/>태그 (line break)
+1. 줄바꿈을 표시하는 블록요소이다.
+2. 컨텐츠가 없는 요소는 시작요소 뒤에 “/” 입력한다.
+
+<hr/> 태그 (Horizontal line)
+1. 수평선을 표시하는 블록요소이다. 
+    -->
   </body>
 </html>
