--- a/html_002_basic.html
+++ b/html_002_basic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>html_002_basic</title>
     <style type="text/css">
       span {
         background-color: red;
