--- a/html_010_address.html
+++ b/html_010_address.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!--
-    adress: 웹사이트가 운용되고 있는 회사정보를 표현할때만 address요소를 사용한다.
+    address: 웹사이트가 운용되고 있는 회사정보를 표현할때만 adress요소를 사용한다.
             단, 일반주소를 표현할 때는 address 요소를 사용하지 않는다.
     -->
     <address>서울특별시 서초구 서초대로77길 54(서초더블유타워 13,14층)</address>
