--- a/html_012_anchor.html
+++ b/html_012_anchor.html
@@ -152,7 +152,7 @@
       (write quite) $touch → 빈 파일 생성 / 파일의 날짜와 시간을 수정 $cat →
       파일 내용 확인 / 내용 출력 $rm → 파일 삭제 $rm -r → 디렉토리에 파일에
       존재할 때 삭제 $rm -rf → $rm - f → 강제 삭제 $rmdir → 비어있는 디렉토리일
-      때 삭제 $exit → 종료 $cat → 파일의 내용을 화면에 출력, 리다이렉션
+      때 삭제 $exit → 종료 $cat  n→ 파일의 내용을 화면에 출력, 리다이렉션
       기호(’>’)를 사용하여 새로운 파일 생성 -m → 메세지 ctrl + c 빠져나올수 있음
     </div>
     <a href="#top">위로</a>
