--- a/html_012_anchor.html
+++ b/html_012_anchor.html
@@ -7,6 +7,15 @@
     <title>html_012_anchor</title>
   </head>
   <body>
+    <!--
+    <a>태그
+      1. 문서 내외부의 링크요소이다.
+      2. target 속성을 이용해서 문서가 실행되는 위치를 지정할 수 있다.
+        _parent(상위 윈도우)
+        _blank(새문서)
+        _top(상위프레임)
+        _self(현재문서)
+    -->
     <p id="top">Top</p>
     <p><a href="http://www.daum.net">daum</a></p>
     <p>
@@ -152,7 +161,7 @@
       (write quite) $touch → 빈 파일 생성 / 파일의 날짜와 시간을 수정 $cat →
       파일 내용 확인 / 내용 출력 $rm → 파일 삭제 $rm -r → 디렉토리에 파일에
       존재할 때 삭제 $rm -rf → $rm - f → 강제 삭제 $rmdir → 비어있는 디렉토리일
-      때 삭제 $exit → 종료 $cat  n→ 파일의 내용을 화면에 출력, 리다이렉션
+      때 삭제 $exit → 종료 $cat n→ 파일의 내용을 화면에 출력, 리다이렉션
       기호(’>’)를 사용하여 새로운 파일 생성 -m → 메세지 ctrl + c 빠져나올수 있음
     </div>
     <a href="#top">위로</a>
