--- a/html_020_form.html
+++ b/html_020_form.html
@@ -7,10 +7,14 @@
     <title>html_020_form</title>
     <style>
       div {
-        width: 200px;
-        height: 200px;
-        text-shadow: 1px 1px 1px #cccccc;
-        border-style: groove;
+        width: 600px;
+        margin-top: 10px;
+      }
+
+      table,
+      td,
+      th {
+        border: 1px solid black;
       }
 
       td {
@@ -21,13 +25,72 @@
         width: 600px;
         border: 1px solid black;
       }
+      
+      caption{
+        text-align: left;
+        font-weight: bolder;
+        margin-bottom: 10px;
+      }
     </style>
   </head>
   <body>
     <table>
       <caption>
-        기본정보입력
+        기본정보 입력
       </caption>
+      <tbody>
+      <tr>
+        <td>이름</td>
+        <td><input type="text" /></td>
+      </tr>
+      <tr>
+        <td>아이디</td>
+        <td><input type="text" /><button>중복체크</button></td>
+      </tr>
+      <tr>
+        <td>비밀번호</td>
+        <td><input type="password" /></td>
+      </tr>
+      <tr>
+        <td>비밀번호확인</td>
+        <td><input type="password" /></td>
+      </tr>
+      <tr>
+        <td>이메일</td>
+        <td>
+          <input type="text" /><span>@</span
+          ><select>
+            <option value="">선택하세요</option>
+            <input type="text" />
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td>연락처</td>
+        <td><input type="text" /></td>
+      </tr>
+      <tr>
+        <td>메일수신여부</td>
+        <td>
+          <input type="radio" name="mail" />받음<input
+            type="radio"
+            name="mail"
+          />받지않음
+        </td>
+      </tr>
+      <tr>
+        <td>관심분야</td>
+        <td>
+          <input type="checkbox" name="group" />자바
+          <input type="checkbox" name="group" />C++
+          <input type="checkbox" name="group" />파이썬
+          <input type="checkbox" name="group" />안드로이드
+        </td>
+      </tr>
+      </tbody>
     </table>
-  </body>
-</html>
+    <div>
+      <input type="reset" value="취소" />
+      <input type="submit" value="저장" />
+    </div>
+ </html>
