--- a/cssdemo/css_001_core.html
+++ b/cssdemo/css_001_core.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css_001_core</title>
     <style type="text/css">
-        p{
-            background-color: yellow;
-            color: gray;
-        }
+      p {
+        background-color: yellow;
+        color: gray;
+      }
 
-        .test{
-            width: 100px;
-            height: 100px;
-            border: 1px solid black;
-            background-color: green;
-        }
+      .test {
+        width: 100px;
+        height: 100px;
+        border: 1px solid black;
+        background-color: green;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <!--
         core 속성 : 여러 요소에서 공통적으로 사용되는 속성
                     단, html, head, meta, script, style, title 요소에서는 사용 불가능
         id 속성 : 특정 요소에 고유값을 지정할 때
-        class 속성 : 여러 요소들을 그룹화할대 사용
+        class 속성 : 여러 요소들을 그룹화할때 사용
         style 속성 : 요소에 직접 스타일 적용할 때
         title 속성 : 요소에 설명을 지정할 때
 
@@ -35,5 +35,5 @@
     <p>item3</p>
     <p>item4</p>
     <div class="test">box</div>
-</body>
+  </body>
 </html>
