--- a/cssdemo/css_008_pseudo.html
+++ b/cssdemo/css_008_pseudo.html
@@ -7,6 +7,10 @@
     <title>css_008_pseudo</title>
     <style>
       /*p요소가 어떤 요소의 첫번째 자식요소 일때 first-child와 last-child만 있음*/
+      p:last-child {
+        background-color: aqua;
+      }
+
       p:first-child {
         background-color: yellow;
       }
