--- a/cssdemo/css_015_background.html
+++ b/cssdemo/css_015_background.html
@@ -36,6 +36,14 @@
         border: 20px solid rgba(255, 0, 0, 0.2);
         padding: 20px;
         background-clip: content-box;
+        background-origin: content-box;
+      }
+      /*background: bg-color bg-image position/bg-size 
+      bg-repeat bg-origin bg-clip bg-attachment initial|inherit;*/
+      .dv4 {
+        background: red;
+        width: 300px;
+        height: 100px;
       }
     </style>
   </head>
