--- a/cssdemo/css_023_float.html
+++ b/cssdemo/css_023_float.html
@@ -15,6 +15,7 @@
         width: 900px;
         height: 100px;
         background-color: blue;
+        border: 1px solid black;
       }
       #nav {
         width: 490px;
@@ -29,29 +30,29 @@
         float: right;
       }
       .box2_sub1 {
-        width: 490px;
-        height: 200px;
+        width: 489px;
+        height: 199px;
         border: 1px solid black;
       }
       .box2_sub2 {
-        width: 490px;
-        height: 400px;
+        width: 489px;
+        height: 398px;
         border: 1px solid black;
       }
 
       .box3_sub1 {
-        width: 390px;
-        height: 200px;
+        width: 389px;
+        height: 199px;
         border: 1px solid black;
       }
       .box3_sub2 {
-        width: 390px;
-        height: 200px;
+        width: 389px;
+        height: 198px;
         border: 1px solid black;
       }
       .box3_sub3 {
-        width: 390px;
-        height: 200px;
+        width: 389px;
+        height: 198px;
         border: 1px solid black;
       }
     </style>
