--- a/cssdemo/css_024_menu.html
+++ b/cssdemo/css_024_menu.html
@@ -41,8 +41,8 @@
         display: block;
         width: 96px;
         height: 30px;
+        /* line-height: 30px; */
         text-align: center;
-        line-height: 30px;
         text-decoration: none;
         font: bold 16px/30px nanumgothic, "굴림체", dotum, sanf-serif;
       }
