--- a/cssdemo/css_026_imageHorizentalMenu.html
+++ b/cssdemo/css_026_imageHorizentalMenu.html
@@ -12,11 +12,69 @@
         border-width: 0;
       }
 
+      div.wrap {
+        width: 816px;
+        margin: 10px auto;
+      }
+
       ul#gnb {
         width: 816px;
         height: 38px;
         list-style-type: none;
-        background-color: yellow;
+        /* background-color: yellow; */
+      }
+
+      ul#gnb li {
+        float: left;
+      }
+
+      ul#gnb li a {
+        width: 136px;
+        height: 38px;
+        display: block;
+        background-image: url("images/globalnavbg.gif");
+        background-image: no-repeat;
+        text-indent: -2000px;
+      }
+      ul#gnb li.apple a {
+        background-position: 0px 0px;
+      }
+
+      ul#gnb li.store a {
+        background-position: -136px 0px;
+      }
+
+      ul#gnb li.mac a {
+        background-position: -272px 0px;
+      }
+
+      ul#gnb li.ipod a {
+        background-position: -408px 0px;
+      }
+      ul#gnb li.download a {
+        background-position: -544px 0px;
+      }
+      ul#gnb li.support a {
+        background-position: -680px 0px;
+      }
+      ul#gnb li.apple a:hover {
+        background-position: 0px -76px;
+      }
+      ul#gnb li.store a:hover {
+        background-position: -136px -76px;
+      }
+      ul#gnb li.mac a:hover {
+        background-position: -272px -76px;
+      }
+
+      ul#gnb li.ipod a:hover {
+        background-position: -408px -76px;
+      }
+      ul#gnb li.download a:hover {
+        background-position: -544px -76px;
+      }
+      ul#gnb li.support a:hover {
+        background-position: -680px -76px;
       }
     </style>
   </head>
