--- a/cssdemo/css_027_position.html
+++ b/cssdemo/css_027_position.html
@@ -22,6 +22,7 @@
         width: 500px;
         height: 200px;
         background-color: yellow;
+        position: relative; /*본인자리 보존*/
       }
       .box3 {
         width: 100px;
@@ -29,17 +30,46 @@
         background-color: red;
         position: absolute;
         left: 50px;
-        top: 50px; /*absolute는 부모를 기분으로 하는데 부모의 position이 static이면 기준점이 body가 됨*/
+        top: 50px;
+        /*absolute는 부모를 기본으로 하는데 부모의 position이 static이면 기준점이 body가 됨
+        근데 position 안정해놓으면 기본은 static*/
       }
 
       .box4 {
         width: 100px;
         height: 100px;
         background-color: green;
+        position: relative;
+        top: 0px;
+        left: 200px;
+      }
+      .box6 {
+        width: 800px;
+        height: 100px;
+        background-color: aqua;
+      }
+
+      .box5 {
+        width: 100px;
+        height: 100px;
+        background-color: orange;
+        position: fixed;
+        right: 10px;
+        top: 50px;
       }
     </style>
   </head>
   <body>
+    <!--
+        포지션(position)
+        1. 포지션은 박스에 대한 배치를 변경할 때 사용된다.
+        2. 포지션은 값으로 static, absolute, relative, fixed가 있다.
+        3. static : 순서에 의한 기본 위치를 지정한다.
+           absolute: 부모 요소를 기준으로 위치를 지정한다.(원래의 위치값을 잃는다)
+           relative: 자기 자신을 기준으로 위치를 지정한다. (원래의 위치값을 가지고 있다)
+           fixed: 스크린을 기준으로 위치를 지정한다 (원래의 위치값을 잃는다)
+    -->
+
     <div class="box1"></div>
     <div class="box2">
       <div class="box3"></div>
@@ -47,12 +77,51 @@
       <p>요소들의 위치변경</p>
     </div>
 
-    <div class="box5">
-      <div class="box6">
-        W3Schools is optimized for learning, testing, and training. Examples
-        might be simplified to improve reading and basic understanding.
-        Tutorials, references ..
-      </div>
+    <div class="box5"></div>
+    <div class="box6">
+      W3Schools is optimized for learning, testing, and training. Examples might
+      be simplified to improve reading and basic understanding. Tutorials,
+      references ..
     </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </body>
 </html>
