--- a/cssdemo/css_004_selector.html
+++ b/cssdemo/css_004_selector.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css_004_selector</title>
     <style>
-      /*<p><span class='unit'>을 의미*/
+      /*<p><span class="unit">을 의미*/
       p .unit {
         background-color: aqua;
       }
-      /*<p class="unit>을 의미*/
+      /*<p class="unit">을 의미*/
       p.unit {
         background-color: yellow;
       }
