--- a/cssdemo/css_009_pseudo.html
+++ b/cssdemo/css_009_pseudo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css_009_pseudo</title>
     <style>
-      /*nth-chile(n)와 nth-of-type(n)*/
+      /*nth-child(n)와 nth-of-type(n)*/
 
       /*모든 자식요소에서 p요소가 2번째일때 적용*/
       p:nth-child(2) {
