--- a/cssdemo/css_005_selector.html
+++ b/cssdemo/css_005_selector.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css_005_selector</title>
     <style>
-      /*선택지 조합*/
+      /*선택자 조합*/
       /*>은 자식 선택자*/
       div > span {
         color: yellow;
