--- a/cssdemo/css_033_tab.html
+++ b/cssdemo/css_033_tab.html
@@ -39,7 +39,7 @@
       }
       .description > strong {
         display: block;
-        background-color: yellow;
+        /* background-color: yellow; */
         width: 120px;
         white-space: nowrap;
         overflow: hidden;
@@ -55,6 +55,27 @@
         line-height: 30px;
         color: white;
         background-color: black;
+      }
+
+      input:nth-of-type(1):checked ~ div.buttons > label:nth-of-type(1) {
+        background-color: yellow;
+        color: black;
+      }
+
+      input:nth-of-type(1):checked ~ div:nth-of-type(3) {
+        display: none;
+      }
+      input:nth-of-type(2):checked ~ div.buttons > label:nth-of-type(2) {
+        background-color: yellow;
+        color: black;
+      }
+
+      input:nth-of-type(2):checked ~ div:nth-of-type(2) {
+        display: none;
+      }
+
+      div#main_aside > input {
+        display: none;
       }
     </style>
   </head>
@@ -72,7 +93,7 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
                 <strong>HTML5 Canvas</strong>
@@ -83,7 +104,7 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
                 <strong>HTML5 Audio</strong>
@@ -94,7 +115,7 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
                 <strong>HTML5 Video</strong>
@@ -105,26 +126,26 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
-                <strong>HTML5 S</strong>
+                <strong>HTML5 Semantic Web</strong>
                 <p>2020-03-15</p>
               </div></a
             >
           </li>
         </ul>
       </div>
-      <!------------------------------->
+      <!--------------css----------------->
       <div class="tab_item">
         <ul>
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
-                <strong>CSS3_1</strong>
+                <strong>CSS3 Transition</strong>
                 <p>2020-03-15</p>
               </div></a
             >
@@ -132,10 +153,10 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
-                <strong>CSS3_2</strong>
+                <strong>CSS3 Animation</strong>
                 <p>2020-03-15</p>
               </div></a
             >
@@ -143,10 +164,10 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
-                <strong>CSS3_3</strong>
+                <strong>CSS3 Border</strong>
                 <p>2020-03-15</p>
               </div></a
             >
@@ -154,10 +175,10 @@
           <li class="item">
             <a href="#"
               ><div class="thumbnail">
-                <img src="https://via.placeholder.com/45x30" alt="" />
+                <img src="https://via.placeholder.com/45x45" alt="" />
               </div>
               <div class="description">
-                <strong>CSS3_4</strong>
+                <strong>CSS3 Transform</strong>
                 <p>2020-03-15</p>
               </div></a
             >
