--- a/jsdemo/js001_basic.html
+++ b/jsdemo/js001_basic.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
       // 자바스크립트 실행문 (한 라인 주석)
       /*
-         여러 라인 자바스크립 주석 처리
+         여러 라인 자바스크립트 주석 처리
       */
       document.write("javascript");
     </script>
