--- a/jsdemo/js011_operator.html
+++ b/jsdemo/js011_operator.html
@@ -31,6 +31,9 @@
       console.log(`numX=${++numX}`); //numX=4
       console.log(`numX=${numX++}`); //numX=4
       console.log(`numX=${numX}`); //numX=5
+      console.log(`numY=${numY ** 2}`); //numY=16
+
+      //단항연산자, 이항연산자
     </script>
   </body>
 </html>
