--- a/jsdemo/js003_variable.html
+++ b/jsdemo/js003_variable.html
@@ -11,7 +11,7 @@
       // 변수(variable) : 변하는 데이터(값)을 저장할 수 있는 메모리 공간이다.
       // var, let, const : 현재 산수는 const, 일반 변수는 let을 사용하도록 권장하고 있다. var는 지금 권장하지 않음
       // var는 변수 재선언이 가능하지만, let과 const는 변수 재선언이 불가능하다.
-      // let은 metable (저장 후 변경 가능) 이고, const는 immutable (저장 후 변경 불가능)이다.
+      // let은 mutable (저장 후 변경 가능) 이고, const는 immutable (저장 후 변경 불가능)이다.
       //   console.log(3);
       //   console.log(3);
 
