--- a/jsdemo/js014_operator.html
+++ b/jsdemo/js014_operator.html
@@ -9,8 +9,8 @@
   <body>
     <script>
       /*
-        조건연산자: 조건식? true : false
-                   조건식? (조건식 ? true1 : false1) : false
+        조건연산자: 조건식? true : false;
+                   조건식? (조건식 ? true1 : false1) : false;
                    회원이고 VIP이면 : 30%, 회원이고 일반이면 : 20%, 비회원이면 : 2%
         */
 
