--- a/jsdemo/js041_today.html
+++ b/jsdemo/js041_today.html
@@ -14,7 +14,7 @@
         [출력결과]
         2022-9-26 17:32:35
     -->
-    <button value="date">오늘날짜출력</button>
+    <button>오늘날짜출력</button>
     <p></p>
   </body>
 </html>
