--- a/jsdemo/js047_lotto.html
+++ b/jsdemo/js047_lotto.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="lotto.js"></script>
+    <script defer src="js048_lotto.js"></script>
     <style>
       div.wrap div {
         border-radius: 50px;
         width: 50px;
         height: 50px;
         border: 1px solid black;
-        background-color: darksalmon;
+        background-color: salmon;
         text-align: center;
         line-height: 50px;
         float: left;
