--- a/jQuerydemo/jquery001_cdn.html
+++ b/jQuerydemo/jquery001_cdn.html
@@ -13,7 +13,7 @@
       // });
 
       $(function () {
-        alert('문서가 로딩된 후 실행할 문장');
+        alert("문서가 로딩된 후 실행할 문장");
       });
     </script>
   </head>
