--- a/jsdemo/prac/main.html
+++ b/jsdemo/prac/main.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="prac/main.css" type="text/css" rel="stylesheet" />
+    <link href="main.css" type="text/css" rel="stylesheet" />
     <script defer src="prac/main.js"></script>
   </head>
   <body>
-    <!--A-->
-    <header>
-      <div>
+    <!--헤더-->
+    <header class="box top">
+      <div class="box2 header">
         <h1 class="logo">
           <a href="#">
-            <img src="" />
+            <img src="img_1/gnb_logo.png" alt="로고"/>
           </a>
         </h1>
       </div>
-      <div>
+      <div class="box2 menu">
         <ul class="">
           <li>
             <a href="#">협회소개</a>
@@ -97,31 +97,33 @@
           </li>
         </ul>
       </div>
+    </div>
     </header>
     <!--B-->
-    <section>
+    <section class="box section">
       <!--슬라이드-->
       <ul class="slide">
         <li>
           <a href="#">
-            <img src="" alt="슬라이드1" />
+            <img src="image_1/배경1.PNG" alt="슬라이드1" />
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="" alt="슬라이드2" />
+            <img src="image_1/배경2.PNG" alt="슬라이드2" />
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="" alt="슬라이드3" />
+            <img src="image_1/배경3.PNG" alt="슬라이드3" />
           </a>
         </li>
       </ul>
     </section>
-    <!---->
-    <main>
-      <div class="">
+    <!--메인내용-->
+    <main class="box main">
+      <div class="left_area">
+        <div class="box2 gongbodo">
         <ol class="tm">
           <li><a href="#">공지사항</a></li>
           <li><a href="#">보도자료</a></li>
@@ -236,10 +238,29 @@
           </li>
         </ol>
       </div>
-      <div class="pbx">
-        <!--배너1-->
-        <a href="#"> <img class='im' src='' </a>
+       <div class="box2 group_report">
+        <!--건설기계임대료 체납 신고 센터-->
+        <div class="center">
+        <a href="#"> <img class='im' src='image_1/건설기계대여.JPG' alt="배너이미지"/> </a>
+        </div>
+        <!--건설기계대여계약 사실 신고-->
+        <div class="report">
+        <a href="#"> <img class='im' src='image_1/건설기계임대료체납.JPG' alt="배너이미지"/> </a></div>
       </div>
+    </div>
+    <div class="right_area">
+      <div calss="box2 edu">
+      </div>
+      <div clas="box2 barogagi"></div>
+    </div>
     </main>
+    <footer class="box footer">
+      <div clas="box2 banner_roll">
+      </div>
+      <div clas="box2 footer">
+        <div class="foot_logo"></div>
+        <div calss="adress"></div>
+      </div>
+    </footer>
   </body>
 </html>
