--- a/jQuerydemo/jquery004_selector.html
+++ b/jQuerydemo/jquery004_selector.html
@@ -27,8 +27,8 @@
     p:nth-of-type(2){
         color:blue;
     }
-    </style>
-</head> -->
+    </style> -->
+</head>
 <body>
     <div id='wrap'>
         <p>part01</p>
